@@ -4,6 +4,8 @@ Jump Start Changelog
 2.1.3 - XX/XX/XXXX
 ------------------
 
+* Fixed: In-dashboard theme updates not working with older server setups -- *An error occurred while updating Jump Start: Download failed. SSL: no alternative certificate subject name matches target host name 'wpjumpstart.com'*
+
 --------------------------------------------------------------
 
 2.1.2 - 07/12/2016
